--- a/pom.xml
+++ b/pom.xml
@@ -28,9 +28,15 @@
         <java.version>1.8</java.version>
         <maven.test.skip>true</maven.test.skip>
         <springframework.version>2.2.5.RELEASE</springframework.version>
+        <mysql.version>8.0.26</mysql.version>
         <druid.version>1.2.8</druid.version>
-        <swagger-ui.version>3.0.3</swagger-ui.version>
+        <swagger2.version>2.9.2</swagger2.version>
+        <swagger-ui.version>2.0.8</swagger-ui.version>
+        <swagger.annotations.version>1.5.22</swagger.annotations.version>
+        <swagger.models.version>1.5.22</swagger.models.version>
         <fastjson2.version>2.0.14</fastjson2.version>
+        <commons.lang3.version>3.9</commons.lang3.version>
+        <commons.beanutils.version>1.9.4</commons.beanutils.version>
         <nexus.base.server>http://maven.aliyun.com/nexus/content/groups/public/</nexus.base.server>
     </properties>
 
@@ -61,7 +67,7 @@
             <dependency>
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
-                <scope>runtime</scope>
+                <version>${mysql.version}</version>
             </dependency>
 
             <!-- druid -->
@@ -88,13 +94,36 @@
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
+                <version>${commons.lang3.version}</version>
             </dependency>
 
-            <!-- swagger-ui -->
+            <!-- commons-beanutils -->
+            <dependency>
+                <groupId>commons-beanutils</groupId>
+                <artifactId>commons-beanutils</artifactId>
+                <version>${commons.beanutils.version}</version>
+            </dependency>
+
+            <!-- swagger -->
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-swagger2</artifactId>
+                <version>${swagger2.version}</version>
+            </dependency>
             <dependency>
                 <groupId>com.github.xiaoymin</groupId>
                 <artifactId>knife4j-spring-boot-starter</artifactId>
                 <version>${swagger-ui.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.swagger</groupId>
+                <artifactId>swagger-annotations</artifactId>
+                <version>${swagger.annotations.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.swagger</groupId>
+                <artifactId>swagger-models</artifactId>
+                <version>${swagger.models.version}</version>
             </dependency>
 
             <!-- fastjson2 -->
