--- a/project-logging/pom.xml
+++ b/project-logging/pom.xml
@@ -18,6 +18,10 @@
             <artifactId>project-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
