--- a/project-system/pom.xml
+++ b/project-system/pom.xml
@@ -27,11 +27,11 @@
         </dependency>
 
         <!-- security -->
-        <dependency>
-            <groupId>com.software</groupId>
-            <artifactId>project-security</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
+        <!--<dependency>-->
+        <!--    <groupId>com.software</groupId>-->
+        <!--    <artifactId>project-security</artifactId>-->
+        <!--    <version>1.0-SNAPSHOT</version>-->
+        <!--</dependency>-->
 
         <!-- Spring boot Web -->
         <dependency>
@@ -44,6 +44,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+
+        <!-- mysql -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
         </dependency>
     </dependencies>
     <build>
