--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
         <swagger-ui.version>2.0.8</swagger-ui.version>
         <swagger.annotations.version>1.5.22</swagger.annotations.version>
         <swagger.models.version>1.5.22</swagger.models.version>
-        <fastjson2.version>2.0.14</fastjson2.version>
+        <fastjson.version>1.2.83</fastjson.version>
         <commons.lang3.version>3.9</commons.lang3.version>
         <commons.beanutils.version>1.9.4</commons.beanutils.version>
         <ip2region.version>2.6.3</ip2region.version>
@@ -49,6 +49,18 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-web</artifactId>
+                <version>${springframework.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-starter-tomcat</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-undertow</artifactId>
                 <version>${springframework.version}</version>
             </dependency>
 
@@ -138,11 +150,11 @@
                 <version>${swagger.models.version}</version>
             </dependency>
 
-            <!-- fastjson2 -->
+            <!-- fastjson -->
             <dependency>
-                <groupId>com.alibaba.fastjson2</groupId>
-                <artifactId>fastjson2</artifactId>
-                <version>${fastjson2.version}</version>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>${fastjson.version}</version>
             </dependency>
 
             <!-- ip2region -->
