--- a/project-logging/pom.xml
+++ b/project-logging/pom.xml
@@ -13,15 +13,11 @@
     <packaging>jar</packaging>
 
     <dependencies>
+        <!-- common -->
         <dependency>
             <groupId>com.software</groupId>
             <artifactId>project-common</artifactId>
             <version>1.0-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
         <!-- aspectj-weaver -->
