--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,6 @@
     <modules>
         <module>project-common</module>
         <module>project-logging</module>
-        <module>project-security</module>
         <module>project-system</module>
     </modules>
 
@@ -75,6 +74,13 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-security</artifactId>
+                <version>${springframework.version}</version>
+            </dependency>
+
+            <!-- configuration-processor -->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-configuration-processor</artifactId>
                 <version>${springframework.version}</version>
             </dependency>
 
