--- a/project-system/pom.xml
+++ b/project-system/pom.xml
@@ -26,12 +26,17 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
-        <!-- security -->
-        <!--<dependency>-->
-        <!--    <groupId>com.software</groupId>-->
-        <!--    <artifactId>project-security</artifactId>-->
-        <!--    <version>1.0-SNAPSHOT</version>-->
-        <!--</dependency>-->
+        <!-- spring security -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
+        <!-- configuration-processor -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+        </dependency>
 
         <!-- Spring boot test -->
         <dependency>
