--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <java.version>1.8</java.version>
         <maven.test.skip>true</maven.test.skip>
         <springframework.version>2.2.5.RELEASE</springframework.version>
+        <jwt.version>0.11.2</jwt.version>
         <mysql.version>8.0.26</mysql.version>
         <druid.version>1.2.8</druid.version>
         <aspectjweaver.version>1.9.8</aspectjweaver.version>
@@ -82,6 +83,25 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-configuration-processor</artifactId>
                 <version>${springframework.version}</version>
+            </dependency>
+
+            <!-- jwt -->
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt-api</artifactId>
+                <version>${jwt.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt-impl</artifactId>
+                <version>${jwt.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt-jackson</artifactId>
+                <version>${jwt.version}</version>
             </dependency>
 
             <!-- mysql -->
