--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
                 <version>${springframework.version}</version>
             </dependency>
 
-            <!-- Spring boot security -->
+            <!-- Spring security -->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-security</artifactId>
@@ -153,7 +153,6 @@
                 <artifactId>aspectjweaver</artifactId>
                 <version>${aspectjweaver.version}</version>
             </dependency>
-
 
             <!-- swagger -->
             <dependency>
