--- a/project-system/src/main/resources/application-dev.yml
+++ b/project-system/src/main/resources/application-dev.yml
@@ -77,6 +77,9 @@ mybatis-plus:
 
 logging:
   config: classpath:logback-dev.xml
+  level:
+    org.flowable.engine.impl.persistence.entity.*: debug
+    org.flowable.task.service.impl.persistence.entity.*: debug
 
 # swagger
 swagger:
